# portablePowerSupplier

./: .gitignore  Cargo.toml  Makefile  README.md  memory.x
.cargo/: config
board/: pps_board.cfg
sources/: main.c  services.c  services.h
sources/adapters/: adapter_common.h  adapter_encoder.c  adapter_lcd.c  adapter_mcu.c
src/: main.rs
src/adapters/: gpio.rs  mod.rs  uart.rs
src/adpaters/: mod.rs
src/board/: board.rs  gpio.rs  mod.rs  uart.rs
src/common/: constants.rs  mod.rs  struct.rs
src/devices/: lcd.rs  mod.rs  transceiver.rs
src/services/: display.rs  mod.rs
src/utils/: logger.rs  mod.rs
